dhall/tests/type-inference/failure/unit/UnionDeprecatedConstructorsKeyword.txt
Type error: error: unbound variable `constructors`
 --> <current file>:1:1
  |
1 | constructors < Left : Natural | Right : Bool >
  | ^^^^^^^^^^^^ not found in this scope
  |
